force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/NI_Org_Details_Installed_Packages__c.object-meta.xml
<CustomObject>
    <label>NI Org Details Installed Packages</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NI Org Details Installed Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>