force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Allowed_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Licenses__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Allowed Licenses</label>
    <length>25</length>
    <type>Text</type>
</CustomField>