force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Apps__c.field-meta.xml
<CustomField>
    <fullName>Apps__c</fullName>
    <label>Apps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>