force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>