force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Install_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Install Date</label>
    <length>60</length>
    <type>Text</type>
</CustomField>