force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Limits__c.field-meta.xml
<CustomField>
    <fullName>Limits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limits</label>
    <type>Checkbox</type>
</CustomField>