force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Managed__c.field-meta.xml
<CustomField>
    <fullName>Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Managed</label>
    <type>Checkbox</type>
</CustomField>