force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Namespace_Prefix__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Namespace Prefix</label>
    <length>60</length>
    <type>Text</type>
</CustomField>