force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/NI_Org_Details__c.field-meta.xml
<CustomField>
    <fullName>NI_Org_Details__c</fullName>
    <label>NI Org Details</label>
    <referenceTo>NI_Org_Details__c</referenceTo>
    <relationshipLabel>NI Org Details Installed Packages</relationshipLabel>
    <relationshipName>NI_Org_Details_Installed_Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>