force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Objects__c.field-meta.xml
<CustomField>
    <fullName>Objects__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <label>Objects</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>