force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Package_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Package_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package Allowed</label>
    <type>Checkbox</type>
</CustomField>