force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Publisher__c.field-meta.xml
<CustomField>
    <fullName>Publisher__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Publisher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>