force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Publisher_Upper__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Upper__c</fullName>
    <formula>UPPER(TRIM(Publisher__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publisher Upper</label>
    <type>Text</type>
</CustomField>