force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>