force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Tabs__c.field-meta.xml
<CustomField>
    <fullName>Tabs__c</fullName>
    <label>Tabs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>