force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Used_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Used_Licenses__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Used Licenses</label>
    <length>25</length>
    <type>Text</type>
</CustomField>