force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <encryptionScheme>None</encryptionScheme>
    <label>Version Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>