force-app/main/default/objects/NI_Org_Details_Installed_Packages__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NI_Org_Details__c</columns>
    <columns>NAME</columns>
    <columns>Publisher__c</columns>
    <columns>Version_Number__c</columns>
    <columns>Namespace_Prefix__c</columns>
    <columns>Managed__c</columns>
    <columns>Apps__c</columns>
    <columns>Tabs__c</columns>
    <columns>Objects__c</columns>
    <columns>Install_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>